test/good/arithmetic.lat
int main() {
    printInt(1+1);
    printInt(5-1);
    printInt(2*3);
    printInt(16/2);
    printInt(210 % 100);
    printInt(-12);

    if (1 < 2) {
        printInt(1);
    }
    if (1 < 1) {
        printInt(0);
    }
    if (1 < 0) {
        printInt(0);
    }


    if (1 <= 2) {
        printInt(2);
    }
    if (1 <= 1) {
        printInt(3);
    }
    if (1 <= 0) {
        printInt(0);
    }

    if (1 > 2) {
        printInt(0);
    }
    if (1 > 1) {
        printInt(0);
    }
    if (1 > 0) {
        printInt(4);
    }


    if (1 >= 2) {
        printInt(0);
    }
    if (1 >= 1) {
        printInt(5);
    }
    if (1 >= 0) {
        printInt(6);
    }

    if (1 == 1) {
        printInt(7);
    }
    if (1 == 0) {
        printInt(0);
    }
    if (1 != 1) {
        printInt(0);
    }
    if (1 != 0) {
        printInt(8);
    }
    return 0;
}
