test/bad/arr_length_lval.lat
int main() {
    int[] a = new int[1];
    a.length = 2;
    return 0;
}
